# playqmlright

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  InspectorServer.cpp  InspectorServer.h  README.md  main.cpp  main.qml
example/: TestBench.qml  test_bench.py
mcp_server/: pyproject.toml  server.py
playqmlright/: pyproject.toml  server.py
qmlapp/: CMakeLists.txt  main.cpp
qmlapp/example/: test_bench.py
qmlinspector/: CMakeLists.txt  Config.cmake.in  InspectorServer.cpp  InspectorServer.h  main.cpp
qmlinspector/example/: test_bench.py
