[project]
name = "playqmlright"
version = "0.1.0"
description = "MCP server for inspecting and controlling a Qt Quick application"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
